--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 
 body {
     width: 250px;
+    height: 100%;
+    border-radius: 5px;
 }
 
 h1 {
@@ -19,7 +21,7 @@ h1 {
 div#linkList {
     height: 300px;
     overflow-y: auto;
-    max-width: 250px;
+    width: 100%;
 }
 
 .loadedLink {
@@ -42,8 +44,7 @@ div#linkList {
 
 .addTile {
     border: none;
-    background-color: #BBB;
-    color: white;
+    background-color: #111;
     outline: none;
     text-align: center;
 }
